changed z-index to fix drag home arrow issue

--- a/css/main.css
+++ b/css/main.css
@@ -96,6 +96,7 @@ body.scroll-enable {
   transition: opacity 0.5s 0s;
   overflow: auto;
   pointer-events: auto;
+  z-index: 3;
 }
 
 .title {
